[package]
name = "irrigation-server"
version = "0.1.0"
authors = ["matthewcroall"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
sysfs_gpio = "0.5"
env_logger = "*"

bytes = "0.5.2"
futures = "0.3.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"